# AaplaManus

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pytest.ini
.github/workflows/: build.yml
app/: config.py  cost_service.py  llm.py  orchestrator.py  router.py
app/agents/: browser.py  code.py  file.py  research.py  types.py
config/: config.example.toml
docs/superpowers/specs/: 2026-06-14-ui-redesign-design.md  2026-06-17-cost-dashboard-design.md  2026-06-20-tauri-desktop-app-design.md
example-prompt-responses/open-in-web-broswer/: open-in-web-broswer-logs  openmanus.html  openmanus_content.txt  openmanus_info.txt  openmanus_visualization.html
example-prompt-responses/secure_assure/backend/: server.js
scripts/: build-server.ps1  create-icons.py
secure_assure/docs/: presentation_tips.md
secure_assure/frontend/src/: App.js
secure_assure/wireframes/: chat_interface.txt  dashboard_homepage.txt  mobile_responsive.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
static/: main.js  style.css
templates/: base.html  index.html
templates/partials/: cloud-dialog.html  history.html  mission-input.html  setup-wizard.html  task-complete.html  task-running.html
tests/: test_agent_types.py  test_browser_agent.py  test_code_agent.py  test_cost_service.py  test_dashboard.py  test_file_agent.py  test_orchestrator.py  test_orchestrator_integration.py  test_research_agent.py  test_router.py  test_templates.py  test_ui_routes.py
(+17 files in other folders)
